yamls/traefik/project/oauth/ing-http.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http-oauth 
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`oauth.8lab.cn`) 
    kind: Rule
    middlewares:
    - name: traefik-midd-redirect
    services:
    - kind: Service
      name: kubernetes
      port: 443
      namespace: default
