yamls/traefik/project/oauth/ing-https.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-https-oauth 
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`oauth.8lab.cn`) 
    kind: Rule
    services:
    - name: oauth-svc 
      port: 8083
      kind: Service
  tls:
    secretName: oauth-tls
